syt_26: Fix share code input height clipping

--- a/src/pages/onboarding/index.scss
+++ b/src/pages/onboarding/index.scss
@@ -91,7 +91,9 @@
       background: #fff;
       border: 2px solid hsl(210, 12%, 88%);
       border-radius: 16px;
-      padding: 24px;
+      height: 96px;
+      line-height: 96px;
+      padding: 0 24px;
       box-sizing: border-box;
       margin-bottom: 32px;
     }
